ffigen/LabSoundHelper.h

typedef struct AudioStreamConfig {
    int32_t device_index;
    uint32_t desired_channels;
    float desired_samplerate;
} AudioStreamConfig;
void ChannelMergerNode_setOutputChannelCount(int nodeId, int n);
///////////////////////////////
/// AudioHardwareDeviceNode ///
///////////////////////////////

int createAudioHardwareDeviceNode(AudioContext* context, const AudioStreamConfig outputConfig, const AudioStreamConfig inputConfig);
void AudioHardwareDeviceNode_start(int nodeId);
void AudioHardwareDeviceNode_stop(int nodeId);
int AudioHardwareDeviceNode_isRunning(int nodeId);
AudioStreamConfig AudioHardwareDeviceNode_getOutputConfig(int nodeId);
AudioStreamConfig AudioHardwareDeviceNode_getInputConfig(int nodeId);
AudioStreamConfig createAudioStreamConfig(int device_index, uint32_t desired_channels, float desired_samplerate );
void AudioHardwareDeviceNode_backendReinitialize(int nodeId);
//////////////////////////////
/// DynamicsCompressorNode ///
//////////////////////////////

int createDynamicsCompressorNode(AudioContext* context);
// Static compression curve parameters.
int DynamicsCompressorNode_threshold(int nodeId);
int DynamicsCompressorNode_knee(int nodeId);
int DynamicsCompressorNode_ratio(int nodeId);
int DynamicsCompressorNode_attack(int nodeId);
int DynamicsCompressorNode_release(int nodeId);
// Amount by which the compressor is currently compressing the signal in decibels.
int DynamicsCompressorNode_reduction(int nodeId);
////////////////
/// ADSRNode ///
////////////////


int createADSRNode(AudioContext* context);
int ADSRNode_finished(int nodeId, AudioContext* context);
void ADSRNode_set(int nodeId, float attack_time, float attack_level, float decay_time, float sustain_time, float sustain_level, float release_time);
// gate signal
int ADSRNode_gate(int nodeId);
// If zero, gate controls attack and sustain, else sustainTime controls sustain
int ADSRNode_oneShot(int nodeId);
// Duration in seconds
int ADSRNode_attackTime(int nodeId);
// Level
int ADSRNode_attackLevel(int nodeId);
// Duration in seconds
int ADSRNode_decayTime(int nodeId);
// Duration in seconds
int ADSRNode_sustainTime(int nodeId);
// Level
int ADSRNode_sustainLevel(int nodeId);
// Duration in seconds
int ADSRNode_releaseTime(int nodeId);