lib/tau_labs_bindings_generated.dart


  late final _ChannelMergerNode_setOutputChannelCountPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'ChannelMergerNode_setOutputChannelCount',
      );
  late final _ChannelMergerNode_setOutputChannelCount =
      _ChannelMergerNode_setOutputChannelCountPtr.asFunction<
        void Function(int, int)
      >();

  /// ////////////////////////////
  /// AudioHardwareDeviceNode ///
  /// ////////////////////////////
  int createAudioHardwareDeviceNode(
    ffi.Pointer<ffi.Void> context,
    AudioStreamConfig outputConfig,
    AudioStreamConfig inputConfig,
  ) {
    return _createAudioHardwareDeviceNode(context, outputConfig, inputConfig);
  }

  late final _createAudioHardwareDeviceNodePtr = _lookup<
    ffi.NativeFunction<
      ffi.Int Function(
        ffi.Pointer<ffi.Void>,
        AudioStreamConfig,
        AudioStreamConfig,
      )
    >
  >('createAudioHardwareDeviceNode');
  late final _createAudioHardwareDeviceNode =
      _createAudioHardwareDeviceNodePtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              AudioStreamConfig,
              AudioStreamConfig,
            )
          >();

  void AudioHardwareDeviceNode_start(int nodeId) {
    return _AudioHardwareDeviceNode_start(nodeId);
  }

  late final _AudioHardwareDeviceNode_startPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'AudioHardwareDeviceNode_start',
      );
  late final _AudioHardwareDeviceNode_start =
      _AudioHardwareDeviceNode_startPtr.asFunction<void Function(int)>();

  void AudioHardwareDeviceNode_stop(int nodeId) {
    return _AudioHardwareDeviceNode_stop(nodeId);
  }

  late final _AudioHardwareDeviceNode_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'AudioHardwareDeviceNode_stop',
      );
  late final _AudioHardwareDeviceNode_stop =
      _AudioHardwareDeviceNode_stopPtr.asFunction<void Function(int)>();

  int AudioHardwareDeviceNode_isRunning(int nodeId) {
    return _AudioHardwareDeviceNode_isRunning(nodeId);
  }

  late final _AudioHardwareDeviceNode_isRunningPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AudioHardwareDeviceNode_isRunning',
      );
  late final _AudioHardwareDeviceNode_isRunning =
      _AudioHardwareDeviceNode_isRunningPtr.asFunction<int Function(int)>();

  AudioStreamConfig AudioHardwareDeviceNode_getOutputConfig(int nodeId) {
    return _AudioHardwareDeviceNode_getOutputConfig(nodeId);
  }

  late final _AudioHardwareDeviceNode_getOutputConfigPtr =
      _lookup<ffi.NativeFunction<AudioStreamConfig Function(ffi.Int)>>(
        'AudioHardwareDeviceNode_getOutputConfig',
      );
  late final _AudioHardwareDeviceNode_getOutputConfig =
      _AudioHardwareDeviceNode_getOutputConfigPtr.asFunction<
        AudioStreamConfig Function(int)
      >();

  AudioStreamConfig AudioHardwareDeviceNode_getInputConfig(int nodeId) {
    return _AudioHardwareDeviceNode_getInputConfig(nodeId);
  }

  late final _AudioHardwareDeviceNode_getInputConfigPtr =
      _lookup<ffi.NativeFunction<AudioStreamConfig Function(ffi.Int)>>(
        'AudioHardwareDeviceNode_getInputConfig',
      );
  late final _AudioHardwareDeviceNode_getInputConfig =
      _AudioHardwareDeviceNode_getInputConfigPtr.asFunction<
        AudioStreamConfig Function(int)
      >();

  AudioStreamConfig createAudioStreamConfig(
    int device_index,
    int desired_channels,
    double desired_samplerate,
  ) {
    return _createAudioStreamConfig(
      device_index,
      desired_channels,
      desired_samplerate,
    );
  }

  late final _createAudioStreamConfigPtr = _lookup<
    ffi.NativeFunction<
      AudioStreamConfig Function(ffi.Int, ffi.Uint32, ffi.Float)
    >
  >('createAudioStreamConfig');
  late final _createAudioStreamConfig =
      _createAudioStreamConfigPtr
          .asFunction<AudioStreamConfig Function(int, int, double)>();

  void AudioHardwareDeviceNode_backendReinitialize(int nodeId) {
    return _AudioHardwareDeviceNode_backendReinitialize(nodeId);
  }

  late final _AudioHardwareDeviceNode_backendReinitializePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'AudioHardwareDeviceNode_backendReinitialize',
      );
  late final _AudioHardwareDeviceNode_backendReinitialize =
      _AudioHardwareDeviceNode_backendReinitializePtr.asFunction<
        void Function(int)
      >();

  /// ///////////////////////////
  /// DynamicsCompressorNode ///
  /// ///////////////////////////
  int createDynamicsCompressorNode(ffi.Pointer<ffi.Void> context) {
    return _createDynamicsCompressorNode(context);
  }

  late final _createDynamicsCompressorNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'createDynamicsCompressorNode',
      );
  late final _createDynamicsCompressorNode =
      _createDynamicsCompressorNodePtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// Static compression curve parameters.
  int DynamicsCompressorNode_threshold(int nodeId) {
    return _DynamicsCompressorNode_threshold(nodeId);
  }

  late final _DynamicsCompressorNode_thresholdPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'DynamicsCompressorNode_threshold',
      );
  late final _DynamicsCompressorNode_threshold =
      _DynamicsCompressorNode_thresholdPtr.asFunction<int Function(int)>();

  int DynamicsCompressorNode_knee(int nodeId) {
    return _DynamicsCompressorNode_knee(nodeId);
  }

  late final _DynamicsCompressorNode_kneePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'DynamicsCompressorNode_knee',
      );
  late final _DynamicsCompressorNode_knee =
      _DynamicsCompressorNode_kneePtr.asFunction<int Function(int)>();

  int DynamicsCompressorNode_ratio(int nodeId) {
    return _DynamicsCompressorNode_ratio(nodeId);
  }

  late final _DynamicsCompressorNode_ratioPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'DynamicsCompressorNode_ratio',
      );
  late final _DynamicsCompressorNode_ratio =
      _DynamicsCompressorNode_ratioPtr.asFunction<int Function(int)>();

  int DynamicsCompressorNode_attack(int nodeId) {
    return _DynamicsCompressorNode_attack(nodeId);
  }

  late final _DynamicsCompressorNode_attackPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'DynamicsCompressorNode_attack',
      );
  late final _DynamicsCompressorNode_attack =
      _DynamicsCompressorNode_attackPtr.asFunction<int Function(int)>();

  int DynamicsCompressorNode_release(int nodeId) {
    return _DynamicsCompressorNode_release(nodeId);
  }

  late final _DynamicsCompressorNode_releasePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'DynamicsCompressorNode_release',
      );
  late final _DynamicsCompressorNode_release =
      _DynamicsCompressorNode_releasePtr.asFunction<int Function(int)>();

  /// Amount by which the compressor is currently compressing the signal in decibels.
  int DynamicsCompressorNode_reduction(int nodeId) {
    return _DynamicsCompressorNode_reduction(nodeId);
  }

  late final _DynamicsCompressorNode_reductionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'DynamicsCompressorNode_reduction',
      );
  late final _DynamicsCompressorNode_reduction =
      _DynamicsCompressorNode_reductionPtr.asFunction<int Function(int)>();

  /// /////////////
  /// ADSRNode ///
  /// /////////////
  int createADSRNode(ffi.Pointer<ffi.Void> context) {
    return _createADSRNode(context);
  }

  late final _createADSRNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'createADSRNode',
      );
  late final _createADSRNode =
      _createADSRNodePtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int ADSRNode_finished(int nodeId, ffi.Pointer<ffi.Void> context) {
    return _ADSRNode_finished(nodeId, context);
  }

  late final _ADSRNode_finishedPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Void>)>
  >('ADSRNode_finished');
  late final _ADSRNode_finished =
      _ADSRNode_finishedPtr.asFunction<
        int Function(int, ffi.Pointer<ffi.Void>)
      >();

  void ADSRNode_set(
    int nodeId,
    double attack_time,
    double attack_level,
    double decay_time,
    double sustain_time,
    double sustain_level,
    double release_time,
  ) {
    return _ADSRNode_set(
      nodeId,
      attack_time,
      attack_level,
      decay_time,
      sustain_time,
      sustain_level,
      release_time,
    );
  }

  late final _ADSRNode_setPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Int,
        ffi.Float,
        ffi.Float,
        ffi.Float,
        ffi.Float,
        ffi.Float,
        ffi.Float,
      )
    >
  >('ADSRNode_set');
  late final _ADSRNode_set =
      _ADSRNode_setPtr.asFunction<
        void Function(int, double, double, double, double, double, double)
      >();

  /// gate signal
  int ADSRNode_gate(int nodeId) {
    return _ADSRNode_gate(nodeId);
  }

  late final _ADSRNode_gatePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('ADSRNode_gate');
  late final _ADSRNode_gate = _ADSRNode_gatePtr.asFunction<int Function(int)>();

  /// If zero, gate controls attack and sustain, else sustainTime controls sustain
  int ADSRNode_oneShot(int nodeId) {
    return _ADSRNode_oneShot(nodeId);
  }

  late final _ADSRNode_oneShotPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'ADSRNode_oneShot',
      );
  late final _ADSRNode_oneShot =
      _ADSRNode_oneShotPtr.asFunction<int Function(int)>();

  /// Duration in seconds
  int ADSRNode_attackTime(int nodeId) {
    return _ADSRNode_attackTime(nodeId);
  }

  late final _ADSRNode_attackTimePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'ADSRNode_attackTime',
      );
  late final _ADSRNode_attackTime =
      _ADSRNode_attackTimePtr.asFunction<int Function(int)>();

  /// Level
  int ADSRNode_attackLevel(int nodeId) {
    return _ADSRNode_attackLevel(nodeId);
  }

  late final _ADSRNode_attackLevelPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'ADSRNode_attackLevel',
      );
  late final _ADSRNode_attackLevel =
      _ADSRNode_attackLevelPtr.asFunction<int Function(int)>();

  /// Duration in seconds
  int ADSRNode_decayTime(int nodeId) {
    return _ADSRNode_decayTime(nodeId);
  }

  late final _ADSRNode_decayTimePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'ADSRNode_decayTime',
      );
  late final _ADSRNode_decayTime =
      _ADSRNode_decayTimePtr.asFunction<int Function(int)>();

  /// Duration in seconds
  int ADSRNode_sustainTime(int nodeId) {
    return _ADSRNode_sustainTime(nodeId);
  }

  late final _ADSRNode_sustainTimePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'ADSRNode_sustainTime',
      );
  late final _ADSRNode_sustainTime =
      _ADSRNode_sustainTimePtr.asFunction<int Function(int)>();

  /// Level
  int ADSRNode_sustainLevel(int nodeId) {
    return _ADSRNode_sustainLevel(nodeId);
  }

  late final _ADSRNode_sustainLevelPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'ADSRNode_sustainLevel',
      );
  late final _ADSRNode_sustainLevel =
      _ADSRNode_sustainLevelPtr.asFunction<int Function(int)>();

  /// Duration in seconds
  int ADSRNode_releaseTime(int nodeId) {
    return _ADSRNode_releaseTime(nodeId);
  }

  late final _ADSRNode_releaseTimePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'ADSRNode_releaseTime',
      );
  late final _ADSRNode_releaseTime =
      _ADSRNode_releaseTimePtr.asFunction<int Function(int)>();
